--- a/l0/.env.example
+++ b/l0/.env.example
@@ -12,7 +12,7 @@ POSTGRES_HOST=
 POSTGRES_PORT=
 POSTGRES_USER=
 POSTGRES_PASSWORD=
-POSTGRES_DATABASE=
+POSTGRES_DB=
 POSTGRES_SSLMODE=
 POSTGRES_CONNECT_TIMEOUT=
 POSTGRES_POOL_MAX_CONNS=
