add HTTP server, handlers packages for Broker and Server, initialization of Server in app

--- a/l0/.env.example
+++ b/l0/.env.example
@@ -7,6 +7,12 @@ CACHE_TYPE=
 SHUTDOWN_TIMEOUT=
 MAX_WORKERS=
 
+# HTTP server configuration
+HTTP_ADDRESS=
+HTTP_READ_TIMEOUT=
+HTTP_WRITE_TIMEOUT=
+HTTP_IDLE_TIMEOUT=
+
 # Postgres storage configuration
 POSTGRES_HOST=
 POSTGRES_PORT=
