add README and frontend

--- a/l0/docker-compose.yml
+++ b/l0/docker-compose.yml
@@ -1,9 +1,9 @@
 services:
-  app:
+  backend:
     build:
       context: .
       dockerfile: Dockerfile
-    container_name: wb-tech-l0-app
+    container_name: wb-tech-l0-backend
     # wait SHUTDOWN_TIMEOUT before stopping container
     stop_grace_period: $SHUTDOWN_TIMEOUT
     restart: unless-stopped
@@ -22,6 +22,20 @@ services:
     # forwarding port to host
     ports:
       - "8080:8080"
+
+  frontend:
+    build: ./frontend
+    container_name: wb-tech-l0-frontend
+    restart: unless-stopped
+    # forwarding port to host
+    ports:
+      - "8081:80"
+    # is in the same network with other containers to communicate
+    networks:
+      - wb-tech-l0-network
+    # waits for healthy backend
+    depends_on:
+      - backend
 
   postgres:
     image: postgres:17-alpine
